# CPE400-Peer-2-Peer-File-Transfer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  frontEnd.cpp
data/peer1/: 10000_1.txt  10000_10.txt  10000_2.txt  10000_3.txt  10000_4.txt  10000_5.txt  10000_6.txt  10000_7.txt  10000_8.txt  10000_9.txt  1000_1.txt  1000_10.txt  1000_2.txt  1000_3.txt  1000_4.txt  1000_5.txt  1000_6.txt  1000_7.txt  1000_8.txt  1000_9.txt  15_1.txt  15_10.txt  15_2.txt  15_3.txt  15_4.txt  15_5.txt  15_6.txt  15_7.txt  15_8.txt  15_9.txt  data.txt  data10.txt  data2.txt  data3.txt  data4.txt  data5.txt  data6.txt  data7.txt  data8.txt  data9.txt  (+5 more)
data/peer2/: 10000_1.txt  10000_10.txt  10000_2.txt  10000_3.txt  10000_4.txt  10000_5.txt  10000_6.txt  10000_7.txt  10000_8.txt  10000_9.txt  1000_1.txt  1000_10.txt  1000_2.txt  1000_3.txt  1000_4.txt  1000_5.txt  1000_6.txt  1000_7.txt  1000_8.txt  1000_9.txt  15_1.txt  15_10.txt  15_2.txt  15_3.txt  15_4.txt  15_5.txt  15_6.txt  15_7.txt  15_8.txt  15_9.txt  data.txt  data10.txt  data2.txt  data3.txt  data4.txt  data5.txt  data6.txt  data7.txt  data8.txt  data9.txt  (+5 more)
src/: diff.hpp  file_sweep.hpp  include_everywhere.hpp  main.cpp  message_manager.cpp  message_manager.hpp  messages.hpp  monitor.hpp  networking_include_everywhere.hpp  peer.cpp  peer.hpp  peer_manager.hpp  serialize message.hpp  serialize_message.hpp  test.cpp  ztnode.hpp
src/reference/: client.cpp.ref  server.cpp.ref  test.cpp.ref
src/server/: main.cpp
